--- a/NUServer.Models/NUServer.Models.csproj
+++ b/NUServer.Models/NUServer.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NUServer.Core\NU.Core.csproj" />
+  </ItemGroup>
+
 </Project>
