--- a/NU.Tests/NU.Tests.csproj
+++ b/NU.Tests/NU.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NUServer.Core\NU.Core.csproj" />
+    <ProjectReference Include="..\NU.Core\NU.Core.csproj" />
   </ItemGroup>
 
 </Project>
