--- a/NUServer.Models/NUServer.Models.csproj
+++ b/NUServer.Models/NUServer.Models.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NUServer.Core\NU.Core.csproj" />
+    <ProjectReference Include="..\NU.Core\NU.Core.csproj" />
   </ItemGroup>
 
 </Project>
