--- a/NU.Core/NU.Core.csproj
+++ b/NU.Core/NU.Core.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NuGet.Versioning" Version="6.6.0" />
-    <PackageReference Include="System.Text.Json" Version="7.0.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="NuGet.Versioning" Version="6.9.1" />
+		<PackageReference Include="System.Text.Json" Version="8.0.3" />
+	</ItemGroup>
 
 </Project>
