--- a/NUServer.Shared/NUServer.Shared.Server.csproj
+++ b/NUServer.Shared/NUServer.Shared.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net8.0</TargetFramework>
@@ -22,6 +22,15 @@
 		<Content Remove="Client\**" />
 		<EmbeddedResource Remove="Client\**" />
 		<None Remove="Client\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="NSL.Generators.FillTypeGenerator" Version="2024.5.4.204" />
+		<PackageReference Include="NSL.Generators.FillTypeGenerator.Attributes" Version="2024.5.4.204" />
+		<PackageReference Include="NSL.Generators.HttpEndPointGenerator.Shared" Version="2024.5.4.204" />
+		<PackageReference Include="NSL.Generators.SelectTypeGenerator" Version="2024.5.4.204" />
+		<PackageReference Include="NSL.Generators.SelectTypeGenerator.Attributes" Version="2024.5.4.204" />
+		<PackageReference Include="NSL.HttpClient" Version="2024.5.4.204" />
 	</ItemGroup>
 
 	<ItemGroup>
